# Better_than_CAM

./: .gitignore  README.md  build_exe.ps1  pyproject.toml  requirements.txt
src/BTCAM/: __init__.py  app.py  assets.py  carousel.py  cli.py  config.py  elevation.py  gif_editor.py  giphy_client.py  lcd_update.py  liquidctl_client.py  media_library.py  models.py  renderer.py  runtime.py  sensors.py  standalone.py  subprocess_utils.py  tray.py  windows_startup.py  winusb_fallback.py
